Changes for staging and docker